Intro section added with styling

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 
 <body>
     <div class="card-container">
+        <section class="intro">
+            <h1 class = "name">Simon Davis</h1>
+            <h2 class = "job-position">Web Developer</h2>
+        </section>
+
         <section class="categories">
             <!-- Portfolio, Social Media, About me, Education -->
             <div class="btn-portfolio btn-category">
