--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </section>
 
         <section class="categories">
-            <!-- Portfolio, Social Media, About me, Education -->
+            <!-- Portfolio, Social Media, About me, Contact -->
             <div class="wrapper">
                 <h2 class="topic-category portfolio-topic">Portfolio</h2>
                 <div class="btn-portfolio btn-category">
