Added specific class wrappers

--- a/index.html
+++ b/index.html
@@ -19,33 +19,25 @@
 
         <section class="categories">
             <!-- Portfolio, Social Media, About me, Contact -->
-            <div class="wrapper">
+            <div class="portfolio-wrapper wrapper">
                 <h2 class="topic-category portfolio-topic">Portfolio</h2>
-                <div class="btn-portfolio btn-category">
-                    <img src="assets/icons/baseline-work_outline-24px.svg" class="icon icon-category">
-                </div>
+                <img src="assets/icons/baseline-work_outline-24px.svg" class="icon icon-category">
             </div>
             <!-- portfolio wrapper -->
-            <div class="wrapper">
+            <div class="social-wrapper wrapper">
                 <h2 class="topic-category social-topic">Social</h2>
-                <div class="btn-social btn-category">
-                    <img src="assets/icons/baseline-share-24px.svg" class="icon icon-category">
-                </div>
+                <img src="assets/icons/baseline-share-24px.svg" class="icon icon-category">
             </div>
             <!-- social wrapper-->
-            <div class="wrapper">
+            <div class="about-me-wrapper wrapper">
                 <h2 class="topic-category about-me-topic">About me</h2>
-                <div class="btn-about-me btn-category">
-                    <img src="assets/icons/baseline-face-24px.svg" class="icon icon-category">
-                </div>
+                <img src="assets/icons/baseline-face-24px.svg" class="icon icon-category">
             </div>
             <!-- about me wrapper-->
-            <div class="wrapper">
-                    <h2 class="topic-category about-me-topic">Contact</h2>                                
-                <div class="btn-contact btn-category">
-                    <img src="assets/icons/baseline-perm_contact_calendar-24px.svg" class="icon icon-category">
-                </div>
-            </div> 
+            <div class="contact-wrapper wrapper">
+                <h2 class="topic-category about-me-topic">Contact</h2>
+                <img src="assets/icons/baseline-perm_contact_calendar-24px.svg" class="icon icon-category">
+            </div>
             <!-- contact wrapper -->
         </section>
         <!-- categories section -->
